tests/wpt/tests/third_party/test262/test/language/expressions/arrow-function/syntax/early-errors/asi-restriction-invalid.js
// Copyright (C) 2015 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
es6id: 14.2
description: >
    ArrowFunction[In, Yield] :
      ArrowParameters[?Yield] [no LineTerminator here] => ConciseBody[?In]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
var af = ()
=> {};
